--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers": "^7.26.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.6",
+    "chart.js": "^4.4.9",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.11.3",
@@ -33,7 +34,6 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.5",
-    "recharts": "^2.15.3",
     "sweetalert2": "^11.15.10",
     "sweetalert2-react-content": "^5.1.0",
     "swiper": "^11.2.6",
