fe prescription, schedule

--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@mui/x-date-pickers": "^7.26.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.6",
+    "antd": "^5.25.3",
     "chart.js": "^4.4.9",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "framer-motion": "^12.11.3",
+    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.5.11",
     "lucide-react": "^0.477.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
